--- a/index.html
+++ b/index.html
@@ -75,12 +75,26 @@
     }
 
     function getEnvironment() {
+    	document.getElementByID("os").append(liff.getOS())
+    	document.getElementByID("language").append(liff.getLanguage())
+    	document.getElementByID("version").append(liff.getVersion())
+    	document.getElementByID("accessToken").append(liff.getAccessToken())
+    	document.getElementByID("isInClient").append(liff.isInClient())
+    	if (liff.isInClient()) {
+    		document.getElementByID("btnLogOut").style.display ="none"
+    	} else {
+    		document.getElementByID("btnMsg").style.display = "none"
+    		document.getElementByID("btnScanCode").style.display = "none"
+    		document.getElementByID("btnClose").style.display = "none"
+    		}
+    	}
+
     }
 
     async function main() {
       alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1654214192-EAYDzlP7" })
-      // getEnvironment()
+       getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
