--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     console.log("Hello World!")
   </script> -->
 
-  <script src="https://static.line-scdn.net/liff/edge/versions/2.1.13/sdk.js"></script> -->
-  <script>
+  <script src="https://static.line-scdn.net/liff/edge/versions/2.1.13/sdk.js"></script> 
     function createUniversalLink() {
     }
 
@@ -86,8 +85,9 @@
     		document.getElementByID("btnMsg").style.display = "none"
     		document.getElementByID("btnScanCode").style.display = "none"
     		document.getElementByID("btnClose").style.display = "none"
-    		}
+
     	}
+  
 
     }
 
