--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </script> -->
 
   <script src="https://static.line-scdn.net/liff/edge/versions/2.1.13/sdk.js"></script> 
+  <script type="text/javascript">
     function createUniversalLink() {
     }
 
