--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <button id="btnClose" onclick="closed()">Close</button>
 
-  <!-- <script src="js/vconsole.min.js"></script> -->
+  <script src="js/vconsole.min.js"></script>
   <!-- <script>
     var vConsole = new VConsole()
     console.log("Hello World!")
@@ -72,6 +72,7 @@
     }
 
     async function getUserProfile() {
+
     }
 
     function getEnvironment() {
@@ -95,7 +96,7 @@
     async function main() {
        await liff.init({ liffId: "1654214192-EAYDzlP7" })
        getEnvironment()
-      // getUserProfile()
+       getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
