--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     async function main() {
        await liff.init({ liffId: "1654214192-EAYDzlP7" })
        getEnvironment()
-       getUserProfile()
+       //getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
