--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     }
 
     async function getUserProfile() {
-
+    	const profile = await liff.getUserProfile()
+        document.getElementById("pictureUrl").src = profile.pictureUrl
+        document.getElementById("statusMessage").append(profile.statusMessage)
+        document.getElementById("displayName").append(profile.displayName)
     }
 
     function getEnvironment() {
@@ -96,7 +99,7 @@
     async function main() {
        await liff.init({ liffId: "1654214192-EAYDzlP7" })
        getEnvironment()
-       //getUserProfile()
+       getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
