--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       await liff.shareTargetPicker([
 {
   "type": "flex",
-  "altText": "Flex Message",
+  "altText": "IMPACT Delivery",
   "contents": {
     "type": "bubble",
     "hero": {
