--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
           "type": "button",
           "action": {
             "type": "uri",
-            "label": "CALL",
-            "uri": "https://linecorp.com"
+            "label": "Add Friend",
+            "uri": "https://lin.ee/BrD004O"
           },
           "height": "sm",
           "style": "link"
@@ -189,8 +189,8 @@
           "type": "button",
           "action": {
             "type": "uri",
-            "label": "WEBSITE",
-            "uri": "https://impact-catering.com/th/"
+            "label": "เพิ่มเพื่อน",
+            "uri": "https://lin.ee/BrD004O"
           },
           "height": "sm",
           "style": "link"
